3.클래스 정리
1. header파일은 class 형태 그대로 다 넣고 함수나 생성자만 안의 내용 다 지우고 형태만 남겨놓으면 됨. 단, 생성자는 대괄호를 넣으면 안됨. 형식선언만 해준다고 생각.
2. .cpp 파일은 헤더에서 불러와서 정의하는거라 생각하자. 그러므로 cpp에는 class선언같은걸 하면 안된다.(선언중복)함수는 void AnimalHotel::checkin(Animal* a) 이런식으로 선언.
3. pragma once는 헤더에 무조건 있어야한다 생각. 안하면 중복오류뜸.
4.virtual은 .cpp에는 하지말고 .h 에만 선언해준다.(1)Animal* animal = new Animal[8];

--- a/AnimalHotel/c++4.vcxproj
+++ b/AnimalHotel/c++4.vcxproj
@@ -139,11 +139,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Animal.cpp" />
+    <ClCompile Include="AnimalHotel.cpp" />
+    <ClCompile Include="CCat.cpp" />
+    <ClCompile Include="CDog.cpp" />
     <ClCompile Include="소스.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animal.h" />
     <ClInclude Include="AnimalHotel.h" />
+    <ClInclude Include="CCat.h" />
+    <ClInclude Include="CDog.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
